--- a/modules/nba-feeds/package.json
+++ b/modules/nba-feeds/package.json
@@ -1,31 +1,35 @@
 {
-  "name": "celtics-feeds",
-  "version": "1.1.5",
+  "name": "nba-feeds",
+  "version": "1.0.0",
   "description": "Return feed urls.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Kyle George <kylepgeorge@gmail.com> (http://www.kylegeorge.io)",
+  "author": "Kyle George <kylepgeorge@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "babel-core": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babelify": "^8.0.0",
-    "grunt": "^1.0.1",
-    "grunt-browserify": "^5.2.0",
-    "grunt-cli": "^1.2.0",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-notify": "^0.4.5",
-    "babel-cli": "^6.23.0",
-    "grunt-babel": "^7.0.0"
+    "fetch-jsonp": "^1.1.3",
+    "whatwg-fetch": "^2.0.4"
   },
   "devDependencies": {
+    "babel-plugin-transform-runtime": "^6.23.0",
     "eslint": "^4.15.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.5.1"
+    "eslint-plugin-react": "^7.5.1",
+    "babel-cli": "^6.23.0",
+    "babel-core": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babelify": "^8.0.0",
+    "grunt": "^1.0.1",
+    "grunt-babel": "^7.0.0",
+    "grunt-browserify": "^5.2.0",
+    "grunt-cli": "^1.2.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-notify": "^0.4.5"
   }
 }
